Align Context Menu in Android Chrome to desktop/FF

Desktop Chrome / Firefox are decoding % sequences in URLs in the
status bar, additionally desktop Chrome is omitting HTTP scheme there.

Patch is including this functionality in the Android Chrome
in the context menu URL and is replacing or extending:

1. crrev.com/2774143002/
2. https://chromium-review.googlesource.com/c/chromium/src/+/877759
3. https://chromium-review.googlesource.com/c/chromium/src/+/1015229

BUG=705233

Change-Id: I70509448108e267b66413a9c8869518706375b68
Reviewed-on: https://chromium-review.googlesource.com/1037123
Commit-Queue: Marcin Wiącek <marcin@mwiacek.com>
Reviewed-by: Maria Khomenko <mariakhomenko@chromium.org>
Reviewed-by: Christopher Thompson <cthomp@chromium.org>
Reviewed-by: Tommy Li <tommycli@chromium.org>
Cr-Commit-Position: refs/heads/master@{#560182}
Former-commit-id: 5c338d326d20d1d24ab987320b1a5323976314d1