components/url_formatter/url_formatter_android.cc
@@ -53,6 +53,18 @@ JNI_UrlFormatter_FormatUrlForDisplayOmitScheme(
                net::UnescapeRule::SPACES, nullptr, nullptr, nullptr));
 }
 
+static ScopedJavaLocalRef<jstring>
+JNI_UrlFormatter_FormatUrlForDisplayOmitHTTPScheme(
+    JNIEnv* env,
+    const JavaParamRef<jclass>& clazz,
+    const JavaParamRef<jstring>& url) {
+  return base::android::ConvertUTF16ToJavaString(
+      env, url_formatter::FormatUrl(
+               JNI_UrlFormatter_ConvertJavaStringToGURL(env, url),
+               url_formatter::kFormatUrlOmitDefaults, net::UnescapeRule::SPACES,
+               nullptr, nullptr, nullptr));
+}
+
 static ScopedJavaLocalRef<jstring> JNI_UrlFormatter_FormatUrlForCopy(
     JNIEnv* env,
     const JavaParamRef<jclass>& clazz,
